# BareMetalScheduler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
config/: system.yaml
docs/: README.md
docs/requirements/: REQ_AlarmEventManager.md  REQ_AnalogSensorManager.md  REQ_BuzzerManager.md  REQ_DiagnosticsSubsystem.md  REQ_DigitalSensorManager.md  REQ_EventBus.md  REQ_LEDManager.md  REQ_LoggingModule.md  REQ_QueueManager.md  REQ_RelayManager.md  REQ_Scheduler_OSAL.md  REQ_StateMachineModule.md  REQ_TOUEngine.md
include/: event.h  event_registry.h  logging.h  mempool.h  platform.h  scheduler.h  task.h
platform/esp32/: CMakeLists.txt
platform/esp32/main/: main_esp32.c
platform/stm32/Src/: main_stm32.c
python/: generate_from_yaml.py
src/: event_registry.c  logging.c  mempool.c  payload_helper.c  scheduler_system.c  task.c  timerwheel.h
src/baremetal_rtos/: event_registry.c  logging.c  payload_helper.c  task.c  timerwheel.c
src/core/: main.c  re_engine.c  re_engine.h  re_hal.h  re_types.h
src/drivers/: sensor_driver.c  sensor_driver.h
src/event/: event_bus.c  event_bus.h
src/event/configs/: EventConfigAlarm.h  EventConfigAnalogSensor.h  EventConfigBuzzer.h  EventConfigDiagnostics.h  EventConfigDigitalSensor.h  EventConfigLED.h  EventConfigLogging.h  EventConfigQueue.h  EventConfigRelay.h  EventConfigStateMachine.h  EventConfigTOU.h
src/hal/esp32/: hal_esp32.c
src/hal/linux/: hal_linux.c
src/hal/stm32/: hal_stm32.c
src/logger/: re_logger.h
src/modules/alarm/: alarm_event_mgr.c  alarm_event_mgr.h
src/modules/analog_sensor/: analog_sensor_mgr.c  analog_sensor_mgr.h
src/modules/buzzer/: buzzer_mgr.c  buzzer_mgr.h
src/modules/diag/: diag_mgr.c  diag_mgr.h
src/modules/digital_sensor/: digital_sensor_mgr.c  digital_sensor_mgr.h
src/modules/led/: led_mgr.c  led_mgr.h
src/modules/logging/: logging_mgr.c  logging_mgr.h
src/modules/queue/: queue_mgr.c  queue_mgr.h
src/modules/relay/: relay_mgr.c  relay_mgr.h
src/modules/statemachine/: state_machine.c  state_machine.h
src/modules/tou/: tou_engine.c  tou_engine.h
src/osal/: osal.h
src/ports/: platform_avr.h  platform_esp32.h  platform_host.h  platform_stm32f4.h
src/scheduler/: re_scheduler.h  scheduler.c  scheduler.h
tests/unit/: test_conditions.c  test_priority.c  test_scheduler.c
tools/: fw_gen.py  rule_engine_gen.py
xml/examples/: industrial_automation.xml
xml/schema/: rule_engine_config.xsd
